<resources>
    <string name="app_name">Calculator</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="division">/</string>
    <string name="multiplication">*</string>
    <string name="enter_1st_number">Enter 1st Number</string>
    <string name="enter_2nd_number">Enter 2nd Number</string>
    <string name="answer">Answer</string>
    <string name="todo">TODO</string>
    <string name="copyright">© ️Vatsal</string>
</resources>